src/test/ui/error-codes/E0138.stderr
error[E0138]: multiple 'start' functions
  --> $DIR/E0138.rs:17:1
   |
14 | fn foo(argc: isize, argv: *const *const u8) -> isize { 0 }
   | ---------------------------------------------------------- previous `start` function here
...
17 | fn f(argc: isize, argv: *const *const u8) -> isize { 0 }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ multiple `start` functions

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0138"
